fix: 11_HouseholdBudgetGui のコードレビュー指摘を解消(#145)
コードレビュー(2026-09-12)で見つかった不具合・改善点を修正する。

- getValueAt/getRowCountが毎回manager.getEntries()を呼び、List.copyOf()で全件コピーが
  走っていたためテーブル再描画が重くなり得た。Collections.unmodifiableList()によるO(1)の
  参照専用ビューに変更
- 保存・読込がなくアプリを閉じるとデータが消えていたため、05_BmiTrackerと同じ方針で
  CSV永続化(BudgetManager.saveTo/loadFrom、BudgetEntry.toCsvLine/fromCsvLine)を追加し、
  BudgetFrameに「保存」「読込」ボタンを追加した
- カテゴリ未入力でも登録できていたため、addEntry/updateEntryで空白チェックを追加
- 日付が常にLocalDate.now()固定だったため、日付入力欄(yyyy-MM-dd)を追加した
- 登録行の削除・編集ができなかったため、BudgetManager.removeEntry/updateEntryを追加し、
  BudgetFrameに「削除」「更新」ボタンを追加した
- JComboBox<EntryType>が英語表示(INCOME/EXPENSE)のままだったため、
  EntryType.getDisplayName()と専用ListCellRendererで「収入」「支出」表示にした

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>